# Bare metal support headers

configure_file(
	input: 'xlocale.h',
	output: 'xlocale.h',
	copy: true
)

configure_file(
	input: '__nop_locale_mgmt.h',
	output: '__nop_locale_mgmt.h',
	copy: true
)

configure_file(
	input: '__posix_l_fallback.h',
	output: '__posix_l_fallback.h',
	copy: true
)

configure_file(
	input: '__strtonum_fallback.h',
	output: '__strtonum_fallback.h',
	copy: true
)
